$Id$

TODO:
- classpath, jamvm
- give W900V a AVM-Webinterface (from 7150)
- orangebox (?)
- bird and netsnmp don't build with more than one job
- deco

revision 105:
- added gdb-clean and gdb-dirclean targets
revision 104:
- reverted .phony targets (toolchain)
- fixes gdb build
revision 103:
- added 140-printk.patch for 7140 and 7141
revision 102:
- fixed deco (select DS_LIB_libncurses)
revision 101:
- fix typo in \root\usr\mww\cgi-bin\file.cgi
revision 100:
- add printk.patch for labors
revision 99:
- libraries are also having dependencies...
revision 98:
- fixed jamvm patch (100-fix-trace.patch)
revision 97:
- fixed typo in deco.mk
revision 96:
- changed all library-dependencies in packages makefiles. Hopefully there will
  be no more sensless configure runs.
revision 95:
- add "--exclude .svn" to tar for all package-targets
revision 94:
- added gdb
revision 93:
- fixed deco.mk (forgot ncurses dependency, wrong path)
revision 92:
- removed ar7kernel-loader
- added evalzmaloader (thanks Enrik) http://www.wehavemorefun.de/fritzbox/EVA
revision 91:
- fix error with download and external toolchain:
	uClibc-libs are not in /root/lib
- updated download toolchain to 0.2
revision 90:
- add/remove patches for (non-working) uClibc-0.9.28.3/1
revision 89:
- fix 7170 Labor patches
revision 84
- fix precompiled toolchain download URL in toolchain/make/download-toolchain.mk
- add forgotten cpmaccfg in make/Config.in
- remove precompiled libs from root/lib
revision 83
- Moving all files back to SVN project's trunk, because we have given up plans
  to merge the repository with Danisahne's Sourceforge repository one day
  (licencing issues concerning AVM copyrighted file patches). So we thought we
  could as well have our own trunk again.
revisions 73-82
- SVN repository restructuring experiments gone bad
revision 72:
- added download location for toolchain (thanks @ DPR)
- updated orangebox to 1.05
revision 70:
- fixed download toolchain
- disable tr069 if selected openssl