@@ -7,6 +7,8 @@ TODO:
 - bird and netsnmp don't build with more than one job
 - deco
 
+revision 106:
+- fixed 120-rc.S-dev.patch for 2170,3131,3170,5050,7050
 revision 105:
 - added gdb-clean and gdb-dirclean targets
 revision 104:
